# remote

./: .bandit.yaml  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  config.example.py  constants.py  requirements.txt  setup.cfg  tasks.py
.github/workflows/: ci.yaml
remote/: app.py  config.example.py  utilities.py  wrapper.py
remote/blueprints/: __init__.py  ens.py  image.py  index.py  network.py  text.py
remote/config/: .gitignore  __init__.py  base.py  test.py
remote/scripts/: tasks.py
remote/utilities/: image.py
technotes/: DevelopmentEnvironment.md
tests/: ci_test.sh  fixture.py  test_app.py
tests/blueprints/: test_image.py  test_index.py  test_network.py
tests/fixtures/: cap.avif  sunny.icns
tests/scripts/: test_tasks.py
