[metadata]
name = remote
version = 0.0.1
url = https://github.com/v2ex/remote
license = MIT
maintainer = V2EX
maintainer_email = hello@v2ex.com
description = Remote worker for image processing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app
